[package]
name = "sub_watcher"
version = "1.0.0"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
mr_splashy_pants = "0.1"
regex = "1.4"
rusqlite = "0.24"
signal-hook = "0.1"
teloxide = "0.3"
tokio = { version = "0.3", features = ["full"] }
